Fix jumping inputs on focus state

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -220,7 +220,8 @@
 
   &:focus,
   &:focus-visible {
-    border: 3px solid $color-blue-light;
+    box-shadow: 0 0 0 3px $color-blue-light;
+    outline: none;
   }
 
   &:disabled {
